--- a/src/pages/FeedPage.css
+++ b/src/pages/FeedPage.css
@@ -5,20 +5,22 @@
 
 .settings {
     width: 250px;
+    border-right: 1px solid gray;
+    min-width:50px;
+    
+    /* align-items:center; */
 }
-@media (max-width: 768px) {
+@media (max-width:825px) {
     .settings {
-        display:none;
-    }
-    .FeedPage {
-        flex-direction: column;
-    align-items: center;
+        width:50px;
+        display:flex; 
+        justify-content:center; 
     }
 }
   
 .feed {
     flex: 1;
-    max-width: 640px;
+    width: 640px;
     /* display:flex; */
     /* justify-content:center; */
     /* align-items:center; */
