restyled feed and toolbar

--- a/src/components/UserFeed.css
+++ b/src/components/UserFeed.css
@@ -1,9 +1,9 @@
 .UserFeed {
-    width:640px;
+    width:768px;
 }
 .posts-container {
     display:flex;
     flex-direction:column;
-    align-items: center;
+    /* align-items: center; */
     justify-content:center;
 }
