--- a/src/components/HomePageSettings.css
+++ b/src/components/HomePageSettings.css
@@ -1,15 +1,19 @@
 .HomePageSettings {
     position:fixed;
-    max-width:250px;
+    display:flex;
     height:100%;
 }
+.HomePageSettings, .settings-wrapper{
+    width:256px;
+}
 .settings-wrapper {
-    /* margin-top:50px; */
     display:flex;
     flex-direction:column;
     justify-content:space-between;
     flex-grow:1;
     height:100%;
+    /* width:auto; */
+    min-width:50px;
 }
 .settings-wrapper div:last-child {
     margin-top: auto;
@@ -24,12 +28,15 @@
     white-space: nowrap;
     display: flex;
     align-items: center;
-    height:48px;
+    height:56px;
+    width:inherit;
+}
+.settings-wrapper > div {
+    border-bottom: 2px solid black;
 }
 .icon{
     width:25px;
     margin:5px;
-    fill:white;
     padding:5px;
 }
 @media (max-width: 825px) {
@@ -37,16 +44,41 @@
         display:none !important;
         outline:1px solid red;
     }
+    .HomePageSettings, .settings-wrapper{
+        width:50px;
+    }
 }
 .yuzu {
-    padding-bottom:50px; 
+    /* padding-bottom:50px;  */
+    min-height:175px;
+    display:flex;
+    justify-content:center;
+    border-right:2px solid black;
+}
+.yuzu > .setting-option {
+    max-width:100px;
+    margin-top:0px !important; 
+
+    /* display:flex; */
+}
+.icon-description {
+    width:fit-content
+}
+.setting-option {
+    width:fit-content;
+}
+.yuzu-logo {
+    max-width:fit-content;
+    font-family: 'Hiragino Kaku Gothic Std', "ヒラギノ角ゴ ProN W3", Meiryo, 'MS PGothic', Sans-serif;
 }
 .more {
     margin-bottom:20px;
+    border: none;
+    border-bottom:none;
 }
 .sidebar-open {
     right: 0; 
-  }
+}
 .overlay {
     position: fixed;
     top: 0;
@@ -58,12 +90,10 @@
     opacity:0;
     pointer-events: none;
     transition: opacity 0.3s ease-in-out, z-index 0.5ms ease-in-out;
-
 }
 
 .sidebar-open {
     pointer-events:all;
-
     opacity:1;
 }
   
