--- a/src/components/PostRenderComponent.css
+++ b/src/components/PostRenderComponent.css
@@ -1,8 +1,6 @@
 .post {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
-    width: 600px; 
+    border-bottom: 2px solid black;
+    width: 768px; 
   }
   
   .post-header {
@@ -14,17 +12,18 @@
   .user-profile {
     display: flex;
     align-items: center;
+    padding:10px;
   }
   
   .profile-image {
-    width: 30px;
-    height: 30px;
+    width: 52px;
+    height: 52px;
     border-radius: 50%;
     background-color: #007bff;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 10px;
+    margin-right: 5px;
     overflow: hidden; /* Clip the alt text */
   }
   
@@ -36,6 +35,7 @@
   
   .username {
     font-weight: bold;
+    font-size:12px;
   }
   
   .created-date {
@@ -46,12 +46,16 @@
   .post-actions {
     display: flex;
     align-items: center;
+    height:40px;
+    position:relative;
+    left:67px;
+    width:500px;
+    margin:10px;
   }
   
   .action-info {
     display: flex;
     align-items: center;
-    margin-right: 10px;
   }
   
   .action-count {
@@ -63,6 +67,9 @@
   
   .count {
     font-weight: bold;
+    font-size:16px;
+    margin-inline:12px;
+    width:50px;
   }
   
   .action-label {
@@ -71,9 +78,16 @@
   }
   
   .post-content {
-    min-height:30px;
-    margin-top: 5px;
-    
+    min-height:55px;
+    font-size:14px;
+    line-height:115%;
+    position:relative;
+    left:67px;
+    width:635px;
+    border:2px solid black;
+    padding:10px;
+    background:#fff;
+    filter:drop-shadow(10px 10px 0 #D9D9D9);
   }
   
   /* Additional styling for buttons */
@@ -81,18 +95,21 @@
   .comment-button,
   .share-button,
   .settings-button {
-    background-color: #007bff;
-    color: #fff;
+    background-color:#ffffff00;
+    /* color: #fff; */
+    width:25px;
+    height:25px;
     border: none;
-    padding: 5px 10px;
     border-radius: 3px;
     cursor: pointer;
+    padding:5px;
   }
   
   .like-button:hover,
   .comment-button:hover,
   .share-button:hover,
   .settings-button:hover {
-    background-color: #0056b3;
+    outline:2px solid rgba(0, 0, 0, 0.455);
+    border-radius:100px;
   }
   
