--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic:wght@400;700&family=Poppins:ital,wght@0,500;1,400;1,500;1,700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic:wght@400;700&family=Poppins:ital,wght@0,500;1,400;1,500;1,700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
+
 :root {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Hiragino Kaku Gothic ProN', "ヒラギノ角ゴ ProN W3", Meiryo, 'MS PGothic', Sans-serif;
+    font-weight: 600;
     font-size: 16px;
     line-height: 24px;
-    font-weight: 400;
-
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
-
-    font-synthesis: none;
-    /* text-rendering: optimizeLegibility; */
+    height:auto;
+    /* color-scheme: light dark; */
+    text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
@@ -43,5 +41,5 @@
 }
   
 body {
-    margin:none;
+    margin:0;
 }
