--- a/src/pages/FeedPage.css
+++ b/src/pages/FeedPage.css
@@ -4,24 +4,21 @@
 }
 
 .settings {
-    width: 250px;
-    border-right: 1px solid gray;
-    min-width:50px;
-    
-    /* align-items:center; */
+    min-width: 256px;
+    border-right: 2px solid black;
+    display:flex;
 }
+
 @media (max-width:825px) {
     .settings {
-        width:50px;
+        min-width:50px;
         display:flex; 
         justify-content:center; 
     }
 }
   
-.feed {
+.feed-side {
     flex: 1;
-    width: 640px;
-    /* display:flex; */
-    /* justify-content:center; */
-    /* align-items:center; */
+    max-width: 768px;
+    border-right: 2px solid black;
 }
