created postAge function which returns a simplified view of when a post was made

--- a/src/components/CreatePostComponent.css
+++ b/src/components/CreatePostComponent.css
@@ -1,6 +1,4 @@
 .CreatePost {
-    height:173px;
-    border:2px solid black;
-    border-left:none;
-    border-right:none;
+    height:175px;
+    border-bottom:2px solid black;
 }
