added shadow to posts

--- a/src/components/PostRenderComponent.css
+++ b/src/components/PostRenderComponent.css
@@ -78,16 +78,30 @@
   }
   
   .post-content {
-    min-height:55px;
     font-size:14px;
     line-height:115%;
+    background:#fff;
     position:relative;
-    left:67px;
+  }
+  .post-content-shadow, .post-content {
+    min-height:55px;;
+    /* left:67px; */
     width:635px;
     border:2px solid black;
     padding:10px;
-    background:#fff;
-    filter:drop-shadow(10px 10px 0 #D9D9D9);
+  }
+  .post-content-shadow {
+    position:relative;
+    z-index:-1;
+    background:#D9D9D9;
+    top:-70px;
+    left:10px;
+  }
+  .content-wrapper{
+    height:80px;
+    width:635px;
+    left:67px;
+    position:relative;
   }
   
   /* Additional styling for buttons */
