--- a/src/components/PostRenderComponent.css
+++ b/src/components/PostRenderComponent.css
@@ -1,151 +1,156 @@
 .post {
-    border-bottom: 2px solid black;
-    width: 768px; 
-  }
-  
-  .post-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .user-profile {
-    display: flex;
-    /* align-items: center; */
-    padding:10px;
-  }
-  
-  .profile-image {
-    width: 52px;
-    height: 52px;
-    border-radius: 50%;
-    background-color: #D9D9D9;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 5px;
-    overflow: hidden; 
-    /* border:2px solid black; */
-  }
-  
-  .initials {
-    font-size: 14px;
-    color: #fff;
-    text-transform: uppercase;
-  }
-  
- 
-  
-  .created-date {
-    font-size: 12px;
-    color: #777;
-  }
-  
-  .post-actions {
-    display: flex;
-    align-items: center;
-    height:40px;
-    position:relative;
-    left:67px;
-    width:670px;
-    margin:10px;
-  }
-  
-  .action-info {
-    display: flex;
-    align-items: center;
-    width:inherit;
-  }
-  .action-info div:last-child{
-    margin-left:auto;
-  }
-  
-  .action-count {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 5px;
-  }
-  
-  .count {
-    font-weight: bold;
-    font-size:16px;
-    margin-inline:12px;
-    width:50px;
-  }
-  
-  .action-label {
-    font-size: 12px;
-    color: #777;
-  }
-  
-  .post-content {
-    font-size:14px;
-    line-height:115%;
-    background:#fff;
-    position:relative;
-  }
-  .post-content-shadow, .post-content {
-    min-height:55px;;
-    /* left:67px; */
-    width:600px;
-    border:2px solid black;
-    padding:10px;
-  }
-  .post-content-shadow {
-    position:relative;
-    z-index:-1;
-    background:#D9D9D9;
-    top:-70px;
-    left:10px;
-  }
-  .content-wrapper{
-    height:80px;
-    width:600px;
-    left:67px;
-    position:relative;
-    top:-10px;
-  }
-  
-  .like-button,
-  .comment-button,
-  .share-button,
-  .settings-button, .save-button{
-    background-color:#ffffff00;
-    width:25px;
-    height:25px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    padding:5px;
-    display:flex;
-    justify-content:center;
-  }
-  .save-button > img {
-    height:25px;
-    display:flex;
-    position:relative;
-  }
-  
-  .like-button:hover,
-  .comment-button:hover,
-  .share-button:hover,
-  .settings-button:hover, .save-button:hover {
-    outline:2px solid rgba(0, 0, 0, 0.455);
-    border-radius:100px;
-  }
-  .elipsis {
-    width:25px;
-    margin-left:20px;
-  }
+  border-bottom: var(--border);
+  width: 768px; 
+}
 
-  .post-info {
-    position:relative;
-    top:-10px;
-    width:fit-content;
-    display:flex;
-    margin-right:20px;
-  }
+.post-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.user-profile {
+  display: flex;
+  /* align-items: center; */
+  padding:10px;
+}
+
+.profile-image {
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  background-color: #D9D9D9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 5px;
+  overflow: hidden; 
+}
+
+.initials {
+  font-size: 14px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+
+
+.created-date {
+  font-size: 12px;
+  color: #777;
+  display:flex;
+  align-items:center;
+}
+
+.post-actions {
+  display: flex;
+  align-items: center;
+  height:40px;
+  position:relative;
+  left:67px;
+  width:670px;
+  margin:10px;
+}
+  
+.action-info {
+  display: flex;
+  align-items: center;
+  width:inherit;
+}
+.action-info div:last-child{
+  margin-left:auto;
+}
+
+.action-count {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.count {
+  font-weight: bold;
+  font-size:16px;
+  margin-inline:12px;
+  width:50px;
+}
+  
+.action-label {
+  font-size: 12px;
+  color: #777;
+}
+
+.post-content {
+  font-size:14px;
+  line-height:115%;
+  background:#fff;
+  position:relative;
+}
+.post-content-shadow, .post-content {
+  min-height:55px;;
+  width:600px;
+  border:var(--border);
+  padding:10px;
+}
+.post-content-shadow {
+  position:relative;
+  z-index:-1;
+  background:#D9D9D9;
+  top:-70px;
+  left:10px;
+}
+.post:hover{
+  cursor:pointer;
+}
+
+
+.content-wrapper{
+  height:80px;
+  width:600px;
+  left:67px;
+  position:relative;
+  top:-10px;
+}
+  
+.like-button,
+.comment-button,
+.share-button,
+.settings-button, .save-button{
+  background-color:#ffffff00;
+  width:25px;
+  height:25px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  padding:5px;
+  display:flex;
+  justify-content:center;
+}
+.save-button > img {
+  height:25px;
+  display:flex;
+  position:relative;
+}
+
+.like-button:hover,
+.comment-button:hover,
+.share-button:hover,
+.settings-button:hover, .save-button:hover {
+  outline:2px solid rgba(0, 0, 0, 0.455);
+  border-radius:100px;
+}
+.elipsis {
+  width:25px;
+  margin-left:20px;
+}
+
+.post-info {
+  position:relative;
+  top:-10px;
+  width:fit-content;
+  display:flex;
+  margin-right:20px;
+}
 .name{
   height:52px;
 }
@@ -156,4 +161,9 @@
   position:relative;
   top:-5px;
   font-size:12px;
+}
+.display-name:hover{
+  cursor:pointer;
+  text-decoration:underline;
+  text-decoration-thickness:2px;
 }
