--- a/src/components/HomePageSettings.css
+++ b/src/components/HomePageSettings.css
@@ -2,6 +2,7 @@
     position:fixed;
     display:flex;
     height:100%;
+    z-index:1;
 }
 .HomePageSettings, .settings-wrapper{
     width:256px;
@@ -12,9 +13,9 @@
     justify-content:space-between;
     flex-grow:1;
     height:100%;
-    /* width:auto; */
     border-right:2px solid black;
-    min-width:50px;
+    z-index:2;
+    background:white;
 }
 .settings-wrapper div:last-child {
     margin-top: auto;
@@ -40,7 +41,8 @@
     margin:5px;
     padding:5px;
 }
-@media (max-width: 825px) {
+/* --halfsize */
+@media (max-width: 1024px) {
     .icon-description {
         display:none !important;
         outline:1px solid red;
@@ -75,24 +77,41 @@
     border: none;
     border-bottom:none;
 }
-.sidebar-open {
-    right: 0; 
-}
+
 .overlay {
-    position: fixed;
+    position: relative;
     top: 0;
-    left: 45px;
+    left: -1px;
     width: 250px;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: 1;
+    background-color: white;
+    z-index: 999;
     opacity:0;
-    pointer-events: none;
+    /* pointer-events: none; */
     transition: opacity 0.3s ease-in-out, z-index 0.5ms ease-in-out;
+    border:var(--border)
 }
 
 .sidebar-open {
     pointer-events:all;
     opacity:1;
+    right: 0; 
+    z-index:2;
 }
   
+.search-wrapper {
+    width: 256px;
+    height: 100%;
+}
+
+.search-wrapper {
+    position:relative;
+    left: -2px;
+    transition: left 0.3s ease-in-out;
+    outline:var(--border);
+}
+
+.search-wrapper.hidden{
+    left: -258px;
+    transition: left 0.3s ease-in-out;
+}
