--- a/src/components/SearchSideBar.css
+++ b/src/components/SearchSideBar.css
@@ -1,10 +1,8 @@
-/* .search-sidebar {
-    position: fixed;
-    top: 0;
-    right: -250px; 
-    width: 250px;
-    height: 100vh;
-    background-color: #f1f1f1;
-    transition: right 0.3s ease-in-out;
+.search-sidebar {
+  position: relative;
+  width: 256px;
+  height: 100%;
+  background-color: white;
   }
-   */
+  
+  
