--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@
     --border: 2px solid black;
     --halfsize:1024px;
 }
+input {
+    font-family: 'Hiragino Kaku Gothic ProN', "ヒラギノ角ゴ ProN W3", Meiryo, 'MS PGothic', Sans-serif;
+    font-weight: 600;
+}
 .loading {
     position: relative;
 }
