--- a/src/components/ProfileEditComponent.css
+++ b/src/components/ProfileEditComponent.css
@@ -2,3 +2,121 @@
     height:100px;
     width:384px;
 }
+.profile-edit-box {
+    width: 512px;
+    margin: 0 auto;
+    padding: 20px;
+    border-right: var(--border);
+    border-bottom: var(--border);
+    border-radius: 4px;
+    min-height:600px;
+}
+
+.profile-edit-box h2 {
+    margin-top: 0;
+    font-size: 24px;
+    color: #333;
+}
+
+.profile-image-wrapper {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.profile-image-edit {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.profile-image input[type="file"] {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.username,
+.display-name-wrapper,
+.bio {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    font-weight: bold;
+    color: #555;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: var(--border);
+    border-radius: 4px;
+}
+.username > input,  .display-name-wrapper > input{
+    width: calc(512px - 2 * 10px);
+}
+input:focus {
+    outline:none;
+}
+
+textarea {
+    height: 100px;
+    resize: vertical;
+    overflow-y: auto;
+}
+
+.profile-edit-submit {
+    display: block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    /* background-color: #007bff; */
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+.profile-edit-submit[disabled] {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+.success-message {
+    margin: 0;
+    padding: 10px;
+    color: #155724;
+    background-color: #d4edda;
+    border: 1px solid #c3e6cb;
+    border-radius: 4px;
+}
+
+.error-message {
+    margin: 0;
+    padding: 10px;
+    color: #721c24;
+    background-color: #f8d7da;
+    border: 1px solid #f5c6cb;
+    border-radius: 4px;
+}
+.feedback-message {
+    margin-left:20px;
+    width:100%;
+}
+.submit-and-message {
+    display:flex;
+}
+
+.loading-box {
+    position:relative;
+    top: 50%;
+    width: 512px;
+    border-right:var(--border);
+}
