createpostcomponent created and header configured

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,8 @@ body {
     max-width: 768px;
     border-right: var(--border);
 }
+.location-title {
+    border-bottom:var(--border);
+    border-right: var(--border);
+    padding:15px;
+}
