--- a/src/components/CreatePostComponent.css
+++ b/src/components/CreatePostComponent.css
@@ -16,6 +16,7 @@
     font-size:16px;
     font-family: 'Poppins', sans-serif;
     font-weight:500;
+    background-color:transparent;
 }
 .counter {
     font-weight:600;
