--- a/src/components/HomePageSettings.css
+++ b/src/components/HomePageSettings.css
@@ -13,9 +13,9 @@
     justify-content:space-between;
     flex-grow:1;
     height:100%;
-    border-right:2px solid black;
+    border-right:var(--border);
     z-index:3;
-    background:white;
+    background:var(--background-colour);
 }
 .settings-wrapper div:last-child {
     margin-top: auto;
@@ -42,6 +42,7 @@
     height:25px;
     margin:5px;
     padding:5px;
+    fill:var(--icon-fill);
 }
 /* --halfsize */
 @media (max-width: 1024px) {
@@ -89,7 +90,7 @@
     left: -1px;
     width: 250px;
     height: 100%;
-    background-color: white;
+    background-color: var(--background-colour);
     z-index: 999;
     opacity:0;
     /* pointer-events: none; */
