--- a/src/components/PostRenderComponent.css
+++ b/src/components/PostRenderComponent.css
@@ -85,13 +85,13 @@
 .post-content {
   font-size:14px;
   line-height:115%;
-  background:#fff;
+  background:var(--post-background-colour);
   position:relative;
 }
 .post-content-shadow, .post-content {
   min-height:55px;;
   width:600px;
-  border:var(--border);
+  border:var(--post-border);
   padding:10px;
 }
 .post-content:hover {
@@ -100,7 +100,7 @@
 .post-content-shadow {
   position:relative;
   z-index:-1;
-  background:#D9D9D9;
+  background:var(--shadow-colour);
   top:-70px;
   left:10px;
 }
@@ -167,7 +167,7 @@
 }
 .ellipsis:hover {
   cursor:pointer;
-  background:rgba(0, 186, 124, 0.1);
+  background:rgba(0, 186, 124, 0.2);
   fill:rgba(0, 186, 124, 1);
   /* opacity:50%; */
 }
@@ -184,15 +184,15 @@
   width:25px;
 }
 .save-button:hover {
-  background:rgba(10,158,199,0.1);
+  background:rgba(10,158,199,0.2);
   fill:rgba(10,158,199,1);
 }
 .unliked:hover{
-  background: rgba(249, 24, 128, 0.1);
+  background: rgba(249, 24, 128, 0.2);
   fill:rgba(249, 24, 128, 1);
 }
 .liked:hover {
-  background: rgba(249, 24, 128, 0.1);
+  background: rgba(249, 24, 128, 0.2);
 }
 .liked {
   fill:rgba(249, 24, 128, 1);
@@ -209,6 +209,14 @@
   cursor:default;
 }
 .comment-button:hover, .share-button:hover {
-  background: rgba(86, 81, 83, 0.1);
+  background: rgba(86, 81, 83, 0.2);
   fill:rgba(86, 81, 83, 1);
+}
+
+.comment-button, 
+.unliked, 
+.ellipsis, 
+.save-button, 
+.share-button {
+  fill:var(--icon-fill);
 }
