--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -37,7 +37,7 @@
     cursor:pointer;
 }
 .active {
-    outline:2px solid black;
+    outline:var(--border);
     border-radius:5px;
 }
 .search-bar {
