--- a/src/components/SearchSideBar.css
+++ b/src/components/SearchSideBar.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 256px;
   height: 100%;
-  background-color: white;
+  background-color: var(--background-colour);
   outline: var(--border);
   z-index:2;
   /* margin:20px; */
