--- a/src/components/CreatePostComponent.css
+++ b/src/components/CreatePostComponent.css
@@ -6,7 +6,7 @@
     align-items:center;
 }
 .compose-post {
-    height:50px;
+    height:45px;
     border:none;
     border-bottom: var(--border);
     padding: 10px;
@@ -17,19 +17,20 @@
     font-family: 'Poppins', sans-serif;
     font-weight:500;
     background-color:transparent;
+    width:100%;
 }
 .counter {
     font-weight:600;
     font-size:12px;
     text-align:right;
-    width:100%;
+    width:85%;
     height:40px;
 }
 .write-and-submit-wrapper {
     width:80%;
     position:relative;
-    left:50%;
-    transform:translateX(-50%);
+    /* left:50%;
+    transform:translateX(-50%); */
 }
 .compose-wrapper {
     width:100%;
@@ -51,14 +52,43 @@
 }
 
 .utils {
-    border:1px solid red;
+    /* border:1px solid red; */
     display:flex;
     width:80%;
     position:relative;
     left:50%;
     transform:translateX(-50%);
 }
+.compose-icon-wrapper {
+    width:20%;
+}
 .post-compose-icon {
     width:20px;
     height:20px;
+    fill:var(--icon-fill);
+    margin-right:10px;
+    position:relative;
+    top:50%;
+    transform:translateY(-50%);
+    cursor:pointer;
+}
+.display-image {
+    display:content;
+    position:relative;
+    height:50px;
+    width:50px;
+    border-radius:50px;
+    left:100%;
+    transform:translateX(-100%);
+}
+.display-image-wrapper {
+    display:flex;
+    width:10%;
+}
+.compose-top-bar {
+    display:flex;
+    width:100%;
+    position:relative;
+    left:calc(50%);
+    transform:translateX(-50%);
 }
