--- a/src/components/CommentModal.css
+++ b/src/components/CommentModal.css
@@ -1,18 +1,18 @@
 .modal-overlay {
-    position: fixed;
+    position:fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index:5;
+    z-index:9999;
 }
 
 .modal {
-    z-index:2;
+    z-index:9999;
     border:2px solid white;
     padding: 20px;
     border-radius: 5px;
