handled adding user posts to feed when they're successfully posted

--- a/src/components/HomePageSettings.css
+++ b/src/components/HomePageSettings.css
@@ -22,7 +22,7 @@
 }
 .setting-option:hover {
     cursor:pointer;
-    background:rgba(240, 240, 240, 0.2);
+    background:var(--hover-colour);
     border-radius:10px;
 }
 
