--- a/src/components/CreatePostComponent.css
+++ b/src/components/CreatePostComponent.css
@@ -18,6 +18,7 @@
     font-weight:500;
     background-color:transparent;
     width:100%;
+    color:var(--text-colour);
 }
 .counter {
     font-weight:600;
