--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -13,6 +13,8 @@
     padding:10px 10px;
     border:var(--border);
     border-radius:5px;
+    background-color:var(--background-colour);
+    color:var(--text-colour)
 }
 .search-form-input:focus {
     outline:none;
