--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ body.light{
     --post-border:2px solid black;
     --post-background-colour:white;
     --button-hover: 2px solid black;
+    --hover-colour:rgba(0,0,0,0.05)
 
 }
 body.dark{
@@ -47,6 +48,7 @@ body.dark{
     --post-border:2px solid rgb(190, 186, 186);
     --post-background-colour:rgb(0, 0, 0);
     --button-hover: 2px solid white;
+    --hover-colour:rgba(255,255,255,.1);
 }
 
 
