--- a/src/pages/UserPage.css
+++ b/src/pages/UserPage.css
@@ -1,7 +1,8 @@
 .UserPage { border-right: var(--border); }
-.profile {
+.profile-section {
     border-bottom: var(--border);
     height:fit-content;
+    min-height:200px;
     width:768px;
 }
 .profile-img {
@@ -52,8 +53,9 @@
 .user-settings-button {
     max-height:50px;
     width:25px;
-    fill:var(--icon-fill)
+    fill:var(--icon-fill);
     /* fill:green; */
+    cursor:pointer;
 }
 .user-utils {
     width:fit-content;
