--- a/src/components/UserFeed.css
+++ b/src/components/UserFeed.css
@@ -4,6 +4,6 @@
 .posts-container {
     display:flex;
     flex-direction:column;
-    /* align-items: center; */
     justify-content:center;
+    border-top:var(--border);
 }
