styling and fetching of post media complete - need to do carousel handling now

--- a/src/components/CreatePostComponent.css
+++ b/src/components/CreatePostComponent.css
@@ -1,9 +1,7 @@
 .CreatePost {
     min-height:119px;
-    max-height:300px;
     display:flex;
     align-items:center;
-    /* opacity:50%; */
 }
 .compose-post {
     height:30px;
@@ -30,15 +28,13 @@
 .write-and-submit-wrapper {
     width:80%;
     position:relative;
-    /* left:50%;
-    transform:translateX(-50%); */
+    display:flex;
+    flex-direction:column;
 }
 .compose-wrapper {
     width:100%;
-}
-.write-and-submit-wrapper {
-    display:flex;
-    align-items:center;
+    padding-block:10px;
+    /* padding:10px; */
 }
 .submit-post {
     justify-content:center;
@@ -47,6 +43,7 @@
     border:var(--border);
     border-radius:10px;
     cursor:pointer;
+    height:25px;
 }
 .submit-post:hover {
     opacity:50%;
@@ -96,4 +93,39 @@
 .disabled-post-button:hover {
     cursor:not-allowed;
     pointer-events: none;
+}
+
+.image-upload-wrapper {
+    
+    display:flex;
+    justify-content:center;
+}
+.media-upload {
+    margin-block:20px;
+    max-width:500px;
+    max-height:500px;
+    object-fit:contain;
+}
+.text-and-post-wrapper {
+    display:flex;
+    align-items:baseline;
+}
+
+.carousel-control {
+    height:30px;
+    width:30px;
+    fill:var(--icon-fill);
+    margin-inline:20px;
+}
+.carousel {
+    display:flex;
+    align-items:center;
+}
+.carousel-control-wrapper:hover{
+    cursor:pointer;
+}
+.carousel-control-wrapper {
+    height:100%;
+    display:flex;
+    align-items:center;
 }
