--- a/src/components/PostRenderComponent.css
+++ b/src/components/PostRenderComponent.css
@@ -73,9 +73,11 @@
 
 .count {
   font-weight: bold;
-  font-size:16px;
-  margin-inline:12px;
-  width:50px;
+  font-size:15px;
+  margin-left:5px;
+  margin-right:12px;
+  /* margin-inline:12px; */
+  width:45px;
 }
   
 .action-label {
